--- a/blogApp/config/database.yml
+++ b/blogApp/config/database.yml
@@ -25,7 +25,7 @@ default: &default
 
 development:
   <<: *default
-  database: blogApp_development
+  database: blogAppInternship_development
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -59,7 +59,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: blogApp_test
+  database: blogAppInternship_test
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -83,6 +83,6 @@ test:
 #
 production:
   <<: *default
-  database: blogApp_production
+  database: blogAppInternship_production
   username: blogApp
   password: <%= ENV["BLOGAPP_DATABASE_PASSWORD"] %>
